--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.8.4",
+    "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "table": "^5.2.3",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
