--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "react": "^16.8.4",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.4",
+    "react-google-charts": "^3.0.11",
+    "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
     "table": "^5.2.3",
     "tachyons": "^4.11.1"
