--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "react": "^16.8.4",
     "react-day-picker": "^7.3.0",
