--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/FarestartTechVolunteers/FlashReportGenerator/issues"
   },
-  "homepage": "https://github.com/FarestartTechVolunteers/FlashReportGenerator#readme",
-  "dependencies": {
-    "axios": "^0.18.0"
-  }
+  "homepage": "https://github.com/FarestartTechVolunteers/FlashReportGenerator#readme"
 }
