trying to add async httpClient

--- a/server/FareStartReportingTool/pom.xml
+++ b/server/FareStartReportingTool/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>bootstrap</artifactId>
             <version>${bootstrap.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.asynchttpclient</groupId>
+            <artifactId>async-http-client</artifactId>
+            <version>2.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
