--- a/server/FareStartReportingTool/pom.xml
+++ b/server/FareStartReportingTool/pom.xml
@@ -7,7 +7,7 @@
     <groupId>FareStartReportingTool</groupId>
     <artifactId>FareStartReportingTool</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging> jar </packaging>
+    <packaging>war</packaging>
     <properties>
         <java.version>1.8</java.version>
         <bootstrap.version>4.2.1</bootstrap.version>
@@ -31,6 +31,12 @@
             <artifactId>json</artifactId>
             <version>20180813</version>
         </dependency>
+
+	<dependency>
+    		<groupId>javax.xml.bind</groupId>
+    		<artifactId>jaxb-api</artifactId>
+    		<version>2.2.11</version>
+	</dependency>
 
         <dependency>
             <groupId>junit</groupId>
@@ -80,6 +86,15 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${basedir}/../../client/build/</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
