--- a/server/FareStartReportingTool/pom.xml
+++ b/server/FareStartReportingTool/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>FareStartReportingTool</groupId>
     <artifactId>FareStartReportingTool</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>war</packaging>
     <properties>
         <java.version>1.8</java.version>
