--- a/client/package.json
+++ b/client/package.json
@@ -32,5 +32,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://weeklyreport-env.b9fv3mafzd.us-west-2.elasticbeanstalk.com"
+  "proxy": "http://localhost:5000"
 }
